[gd_scene load_steps=8 format=3 uid="uid://cgiuqv86km33t"]

[ext_resource type="Script" path="res://cartas/card_blue_script.gd" id="1_klilu"]
[ext_resource type="Texture2D" uid="uid://1s8p41jsktcw" path="res://images/cartas/carta_azul-removebg-preview.png" id="2_cgt41"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2a6ns"]
size = Vector2(80.1032, 114.49)

[sub_resource type="Animation" id="Animation_34x77"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AreaCarta_Azul/card:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(86.688, 112)]
}

[sub_resource type="Animation" id="Animation_6e8qs"]
resource_name = "deselect"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AreaCarta_Azul/card:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-11.684, 8), Vector2(-11.6838, 46.5116)]
}

[sub_resource type="Animation" id="Animation_7nku4"]
resource_name = "select"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AreaCarta_Azul/card:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-11.6838, 46.5116), Vector2(-11.684, 8)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oyc5m"]
_data = {
"RESET": SubResource("Animation_34x77"),
"deselect": SubResource("Animation_6e8qs"),
"select": SubResource("Animation_7nku4")
}

[node name="card_blue" type="Container"]
custom_minimum_size = Vector2(80, 80)
offset_right = 85.0
offset_bottom = 120.0
scale = Vector2(1.36941, 2.236)
script = ExtResource("1_klilu")

[node name="AreaCarta_Azul" type="Area2D" parent="."]
metadata/_edit_group_ = true

[node name="card" type="Sprite2D" parent="AreaCarta_Azul"]
position = Vector2(86.688, 112)
scale = Vector2(0.504369, 0.310753)
texture = ExtResource("2_cgt41")
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaCarta_Azul"]
position = Vector2(41.7355, 60.8229)
shape = SubResource("RectangleShape2D_2a6ns")

[node name="Anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_oyc5m")
}

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="input_event" from="AreaCarta_Azul" to="." method="_on_area_carta_input_event"]
